CHANGES
=======

* Wrap deprecated methods
* Add mock as test-requirement
* - Loading .yaml or .json collections without defining them in mongodb\_fixtures option

2.1.1
-----

* Fix documentation bugs

2.1.0
-----

* Update changelog. Switch to post-versioning
* Added tox-travis and python 3.6 tests/annotations
* Replaces redundant \`pytestconfig.getini\` with intended \`getoption\`
* Fixes a bug with file extension check
* Adds Python 3 interpreters for Travis CI
* Adds python 3.5 tox environment and package metadata classifier
* Local variable name doesn't clash with built-in "format"
* Fixture files are opened in UTF-8 no matter what the system encoding is
* Adds function and tests to make skipping for specific engines easier
* Fix link to migration section

2.0.2
-----

* Build sdist distributions on travis-ci
* Fix monospaced text
* Adapt documentation. Add migration section
* Remove version restriction from mongomock

2.0.1
-----

* Update repo-name in travis-ci configuration

2.0.0
-----

* Set next development target to 2.1.0
* Rename project to pytest-mongodb
* Remove version 3.3.5 from .python-version

1.3.0
-----

* Set next development version to 1.4.0
* Adds command line option to change humongous settings

1.2.4
-----

* pinning mongomock version below 3.0.0

1.2.3
-----

* Remove bogus print call

1.2.2
-----

* Add twine for deployment to workaround https://github.com/travis-ci/dpl/issues/296

1.2.1
-----

* Update travis configuration to possibly fix deplyoment problem

1.2.0
-----

* Set next development target to 1.3.0
* Use bson.json\_util to load fixtures. Allow real MongoClient

1.1.0
-----

* Set next development target to 1.2.0
* Load parsed docs from cache
* Update package meta data. Add license and dev status

1.0.5
-----

* Update README.rst
* Add highlighting to code-blocks

1.0.4
-----

* Build wheels instead of source packages

1.0.3
-----

* Use MIT license
* Add build and version info to README
* Update pip before building